<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="nit.livetex.livetexsdktestapp.InitActivity">

    <TextView
        android:id="@+id/inputCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/input_id"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:text="@string/enter_the_code"
        android:textColor="@android:color/black"
        android:textSize="28sp" />

    <EditText
        android:id="@+id/input_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="64dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp" />

    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_id"
        android:layout_centerHorizontal="true"
        android:background="@drawable/blue_btn"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/next"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn"
        android:layout_centerHorizontal="true"
        android:background="@drawable/blue_btn"
        android:layout_marginTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/clear"
        android:textColor="@android:color/white" />

</RelativeLayout>

